Theming process logs like a terminal output: Adding ansi2html

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "symfony/process": "^3.3"
+        "symfony/process": "^3.3",
+        "sensiolabs/ansi-to-html": "^1.1"
     }
 }
